# ModemInfo

./: CMakeLists.txt  Makefile  README.md  config.h.in
examples/: quectel.json  sierra.json
lib/ModemInfo/: ModemInfo.cpp  ModemInfo.h  ModemInfoAt.cpp  ModemInfoAt.h  ModemInfoQmi.cpp  ModemInfoQmi.h
lib/Options/: Options.cpp  Options.h
openwrt-cmake/: Toolchain-mips.cmake  build-openwrt-package.sh  build-openwrt.sh  build-release.sh  build.sh
src/: main.cpp
